--- a/YoMA/YoMA/projects/templates/projects/single-project.html
+++ b/YoMA/YoMA/projects/templates/projects/single-project.html
@@ -1,107 +1,57 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <!-- Favicon -->
-  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-  <!-- Icon - IconMonster -->
-  <link rel="stylesheet" href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css" />
-  <!-- Mumble UI -->
-  <link rel="stylesheet" href="uikit/styles/uikit.css" />
-  <!-- Dev Search UI -->
-  <link rel="stylesheet" href="styles/app.css" />
-
-  <title>DevSearch - Connect with Developers!</title>
-</head>
-
-<body>
-  <!-- Header Section -->
-  <header class="header">
-    <div class="container container--narrow">
-      <a href="/" class="header__logo">
-        <img src="images/logo.svg" alt="DevSearch Logo" />
-      </a>
-      <nav class="header__nav">
-        <input type="checkbox" id="responsive-menu" />
-        <label for="responsive-menu" class="toggle-menu">
-          <span>Menu</span>
-          <div class="toggle-menu__lines"></div>
-        </label>
-        <ul class="header__menu">
-          <li class="header__menuItem"><a href="index.html">Developers</a></li>
-          <li class="header__menuItem"><a href="projects.html">Projects</a></li>
-          <li class="header__menuItem"><a href="inbox.html">Inbox</a></li>
-          <li class="header__menuItem"><a href="account.html">My Account</a></li>
-          <li class="header__menuItem"><a href="login.html" class="btn btn--sub">Login/Sign Up</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-
+{% extends 'projects/base.html' %}
+{% load static %}
+{% block content %}
   <!-- Main Section -->
   <main class="singleProject my-md">
     <div class="container">
       <div class="layout">
         <div class="column column--1of3">
-          <h3 class="singleProject__subtitle">Tools & Stacks</h3>
+          <h3 class="singleProject__subtitle">Music style</h3>
           <div class="singleProject__toolStack">
+            {% for tag in project.tags.all %}
             <span class="tag tag--pill tag--sub tag--lg">
-              <small>Figma</small>
+              <small>{{ tag }}</small>
             </span>
-            <span class="tag tag--pill tag--sub tag--lg">
-              <small>React Js</small>
-            </span>
-            <span class="tag tag--pill tag--sub tag--lg">
-              <small>REST API</small>
-            </span>
-            <span class="tag tag--pill tag--sub tag--lg">
-              <small>GraphQL</small>
-            </span>
-            <span class="tag tag--pill tag--sub tag--lg">
-              <small>TypeScript</small>
-            </span>
-            <span class="tag tag--pill tag--sub tag--lg">
-              <small>Webpack</small>
-            </span>
-            <span class="tag tag--pill tag--sub tag--lg">
-              <small>NextJS</small>
-            </span>
-            <span class="tag tag--pill tag--sub tag--lg">
-              <small>Postgres</small>
-            </span>
-            <span class="tag tag--pill tag--sub tag--lg">
-              <small>MongoDB</small>
-            </span>
+            {% endfor %}
+
           </div>
-          <a class="singleProject__liveLink" href="#" target="_blank"><i class="im im-external-link"></i>Source Code
+          {% if project.source_link %}
+          <a class="singleProject__liveLink" href="{{ project.source_link }}" target="_blank"><i class="im im-external-link"></i>Source Code
           </a>
+          {% endif %}
         </div>
         <div class="column column--2of3">
-          <img class="singleProject__preview" src="images/project-c.png" alt="portfolio thumbnail" />
-          <a href="profile.html" class="singleProject__developer">Md. Shahriar Parvez</a>
-          <h2 class="singleProject__title">Portfolio Landing Page for a Coding Mentor</h2>
-          <h3 class="singleProject__subtitle">About the Project</h3>
-          <div class="singleProject__info">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima harum maxime debitis amet voluptates esse
-            a perferendis tempora, natus pariatur obcaecati odit quisquam fugit deserunt.
+          <img class="singleProject__preview" src="{{ project.featured_image.url }}" alt="portfolio thumbnail" />
 
-            <br />
-            <br />
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic voluptates earum possimus a perferendis culpa
-            omnis, libero quae soluta, obcaecati amet. Quam earum ad qui reprehenderit eligendi porro ab possimus
-            fugit voluptatem rerum eius sapiente, nemo mollitia aperiam suscipit culpa corrupti officiis dicta soluta
-            ut similique! Iste soluta quae tempora alias assumenda? Nam nesciunt nihil enim tempore cum quo
-            architecto?
+          <h2 class="singleProject__title">{{ project.title }}</h2>
+          <h3 class="singleProject__subtitle">About the RadioStation</h3>
+          <div class="singleProject__info">
+            {{ project.description }}
           </div>
+          
+
+
+
+          <div id="radiobells_container"></div>
+
+
+          <link href="{% static 'styles/style.css' %}" type="text/css" rel="stylesheet" />
+          <script>
+          var rad_backcolor="#434242"; var rad_logo = "black"; var rad_autoplay = false;
+          var rad_width = "responsive"; var rad_width_px = 330;
+          var rad_stations =['{{ project.demo_link }}','{{ project.title }}','{{ project.source_link }}'];
+          </script>
+
+          <script src="{% static 'styles/v2_1.js' %}" charset="UTF-8">
+<!--          <script src="https://www.radiobells.com/script/v2_1.js" charset="UTF-8">-->
+
+          </script>
+
 
           <div class="comments">
             <h3 class="singleProject__subtitle">Feedback</h3>
             <h5 class="project--rating">
-              36% Postitive Feedback (18 Votes)
+              {{ project.vote_ratio }}% Positive Feedback ({{ project.vote_total }} Vote{{ project.vote_total|pluralize:'s' }})
             </h5>
 
             <form class="form" action="#" method="POST">
@@ -147,6 +97,4 @@
     </div>
     </div>
   </main>
-</body>
-
-</html>
+{% endblock %}
