--- a/YoMA/YoMA/projects/templates/projects/projects.html
+++ b/YoMA/YoMA/projects/templates/projects/projects.html
@@ -7,15 +7,15 @@
     <section class="hero-section text-center">
       <div class="container container--narrow">
         <div class="hero-section__box">
-          <h2>Search for <span>Projects</span></h2>
+          <h2>Search for <span>Radio stations</span></h2>
         </div>
 
         <div class="hero-section__search">
           <form class="form" action="#" method="get">
             <div class="form__field">
-              <label for="formInput#search">Search By Projects </label>
+              <label for="formInput#search">Search By Radio station's name </label>
               <input class="input input--text" id="formInput#search" type="text" name="text"
-                placeholder="Search by Project Title" />
+                placeholder="Search by Radio station's name" />
             </div>
 
             <input class="btn btn--sub btn--lg" type="submit" value="Search" />
