--- a/YoMA/YoMA/projects/templates/projects/single-project.html
+++ b/YoMA/YoMA/projects/templates/projects/single-project.html
@@ -27,6 +27,7 @@
           <h3 class="singleProject__subtitle">About the RadioStation</h3>
           <div class="singleProject__info">
             {{ project.description }}
+            
           </div>
           
 
@@ -39,7 +40,7 @@
           <script>
           var rad_backcolor="#434242"; var rad_logo = "black"; var rad_autoplay = false;
           var rad_width = "responsive"; var rad_width_px = 330;
-          var rad_stations =['{{ project.demo_link }}','{{ project.title }}','{{ project.source_link }}'];
+          var rad_stations =['{{ project.demo_link }}','{{ project.title }}','{{ project.name_link }}'];
           </script>
 
           <script src="{% static 'styles/v2_1.js' %}" charset="UTF-8">
